# obkv-table-client-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  rust-toolchain  rustfmt.toml
.github/workflows/: ci.yaml
benches/concurrent_insert/: mod.rs
components/version_test_derive/: Cargo.toml
components/version_test_derive/src/: lib.rs
docs/: test_tables.sql  ycsb.sql
docs/simple_demo/simple_operation/: aggregationDemo.md  demo.md
etc/: license.template
src/: constant.rs  error.rs  lib.rs  macros.rs
src/client/: filter.rs  metrics.rs  mod.rs  ocp.rs  query.rs  table.rs  table_client.rs
src/location/: mod.rs  ob_part_constants.rs  ob_part_desc.rs  part_func_type.rs  util.rs
src/monitors/: client_metrics.rs  mod.rs  prometheus.rs  proxy_metrics.rs  rpc_metrics.rs  runtime_metrics.rs
src/rpc/: conn_pool.rs  mod.rs  proxy.rs
src/rpc/protocol/: codes.rs  lsop.rs  mod.rs  payloads.rs  query.rs  query_and_mutate.rs
src/rpc/protocol/partition/: mod.rs  ob_column.rs  ob_partition_key.rs
src/rpc/util/: mod.rs
src/rpc/util/checksum/: mod.rs  ob_crc64.rs
src/rpc/util/hash/: mod.rs  ob_hash_sort_utf8mb4.rs
src/runtime/: mod.rs
src/serde_obkv/: de.rs  error.rs  mod.rs  ser.rs  util.rs
src/serde_obkv/value/: from.rs  mod.rs
src/util/: mod.rs  obversion.rs  permit.rs  security.rs
tests/: common.rs  cse_table_test.rs  table_client_test.rs  test_cse_table.rs  test_hbase_client.rs  test_table_client.rs  test_table_client_aggregation.rs  test_table_client_base.rs  test_table_client_hash.rs  test_table_client_key.rs  test_table_client_range.rs  test_table_client_sql.rs
tests/utils/: common.rs  mod.rs
ycsb-rs/: Cargo.toml  Makefile  README.md
ycsb-rs/src/: db.rs  generator.rs  main.rs  monitor.rs  obkv_client.rs  properties.rs  runtime.rs  sqlite.rs  workload.rs
ycsb-rs/src/generator/: acknowledged_counter_generator.rs  counter_generator.rs  discrete_generator.rs  uniform_long_generator.rs  zipfian_generator.rs
ycsb-rs/src/workload/: core_workload.rs
ycsb-rs/workloads/: workload_obkv.toml  workload_template.toml
