[package]
name = "obkv-table-client-rs"
version = "0.1.0"
authors = ["OceanBase OBKV Developers", "CeresDB Authors <ceresdb@service.alipay.com>"]
edition = "2021"

[lib]
name = "obkv"

[[bench]]
name = "concurrent_insert"
harness = false
path = "benches/concurrent_insert/mod.rs"

[dependencies]
byteorder = "1.2"
bytes = "0.4"
chrono = "0.4"
crossbeam = "0.7"
futures = "0.1"
futures-cpupool = "0.1"
lazy_static = "1.3"
log = "0.4"
murmur2 = "0.1"
mysql = "16.1"
net2 = "0.2"
prometheus = "0.7"
quick-error = "1.2"
r2d2 = "0.8.3"
rand = "0.6"
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls", "blocking"] }
rust-crypto = "0.2"
scheduled-thread-pool = "0.2"
serde = "1.0"
serde_bytes = "0.10"
serde_derive = "1.0"
serde_json = "1.0"
spin = "0.5.0"
tokio-codec = "0.1"
uuid = { version = "1.3.0", default-features = false, features = ["v4", "fast-rng", "macro-diagnostics"] }
zstd = "0.11"

[dev-dependencies]
env_logger = "0.10"
scoped_threadpool = "0.1"
serial_test = "0.2"
serial_test_derive = "0.2"
tempfile = "3.0"
test-log = "0.2"
time = "0.1"
