[package]
name = "version_test_derive"
version = "0.1.0"
authors = ["熙凯 <xikai.wxk@antfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version="1.0", features=["full"] }
proc-macro2 = "1.0"
